working with breakpoints

--- a/src/components/Designs.astro
+++ b/src/components/Designs.astro
@@ -1,27 +1,27 @@
 <div
   aria-hidden
-  class="w-32 h-32 bg-white [clip-path:circle(50%_at_50%_50%)] absolute top-12 right-40"
+  class="hidden md:block w-32 h-32 bg-white [clip-path:circle(50%_at_50%_50%)] absolute top-6 lg:top-12 right-4 lg:right-40"
 >
 </div>
 
 <div
   aria-hidden
-  class="[clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-0"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-0"
 >
 </div>
 <div
   aria-hidden
-  class="[clip-path:polygon(33%_0,100%_47%,100%_100%,0_0)] h-32 w-32 bg-white absolute bottom-32 left-0"
+  class="hidden lg:block [clip-path:polygon(33%_0,100%_47%,100%_100%,0_0)] h-32 w-32 bg-white absolute bottom-32 left-0"
 >
 </div>
 <div
   aria-hidden
-  class="[clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-32"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-32"
 >
 </div>
 <div
   aria-hidden
-  class="[clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-64"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-64"
 >
 </div>
 
