save page as a component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,89 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Designs from "../components/Designs.astro";
-import WhatsappIcon from "../icons/Whatsapp.astro";
-import FacebookIcon from "../icons/Facebook.astro";
-import InstagramIcon from "../icons/Instagram.astro";
+import ThePage from "../components/ThePage.astro";
 ---
 
-<Layout title="Grupo Visual">
-  <main class="w-full min-h-screen flex">
-    <div class="w-full bg-back relative pl-4 sm:pl-4 lg:pl-8 xl:pl-12">
-      <h3
-        class="text-white italic text-3xl w-64 max-w-[80%] mt-52 z-20 hidden xl:block"
-      >
-        Estude com a gente e saia na frente!
-      </h3>
-      <div
-        class="h-20 w-full lg:w-10/12 bg-secondary pl-8 py-2 absolute top-0 left-0"
-        aria-hidden
-      >
-        <img
-          alt="Logo de Grupo Visual cor branca"
-          src="/images/grupo_visual_logo.webp"
-          class="max-h-full"
-        />
-      </div>
-
-      <img
-        alt="Mulher com uma notebook"
-        src="/images/woman_with_laptop.webp"
-        class="absolute bottom-0 right-0 max-h-[90%] z-10"
-      />
-
-      <Designs />
-    </div>
-    <div class="w-full px-8 flex flex-col justify-center items-center relative">
-      <div class="w-fit h-fit">
-        <h1 class="text-back font-bold text-7xl lg:text-8xl text-right">
-          Em breve!
-        </h1>
-        <div class="text-right w-full flex flex-col items-end">
-          <span class="text-back">Este site está em construção</span>
-          <h2 class="text-4xl lg:text-5xl font-bold text-primary w-96 mt-12">
-            Estamos fazendo mudanças para melhor!
-          </h2>
-
-          <a
-            href="https://www.gpvisualead.com.br/login"
-            target="_blank"
-            class="mt-12"
-          >
-            <button
-              class="bg-primary text-white text-2xl font-bold p-6 shadow-sm hover:scale-110 duration-200"
-            >
-              ÁREA DO ALUNO</button
-            >
-          </a>
-
-          <div class="w-fit mt-12 flex space-x-3">
-            <a target="_blank" href="https://www.instagram.com/grupovisualfb/">
-              <div
-                class="w-10 h-10 bg-back p-2 rounded-full hover:scale-110 duration-200"
-              >
-                <InstagramIcon />
-              </div>
-            </a>
-            <a
-              target="_blank"
-              href="https://www.facebook.com/grupovisualcursos/?ref=pages_you_manage"
-            >
-              <div
-                class="w-10 h-10 bg-back p-2 rounded-full hover:scale-110 duration-200"
-              >
-                <FacebookIcon />
-              </div>
-            </a>
-            <a target="_blank" href="https://wa.me/+554630554355">
-              <div
-                class="w-10 h-10 bg-back p-2 rounded-full hover:scale-110 duration-200"
-              >
-                <WhatsappIcon />
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-</Layout>
+<ThePage />
