--- a/src/components/Designs.astro
+++ b/src/components/Designs.astro
@@ -1,6 +1,6 @@
 <div
   aria-hidden
-  class="hidden md:block w-32 h-32 bg-white [clip-path:circle(50%_at_50%_50%)] absolute top-6 lg:top-12 right-4 lg:right-40"
+  class="w-32 h-32 bg-white [clip-path:circle(50%_at_50%_50%)] absolute top-6 lg:top-12 right-4 lg:right-40"
 >
 </div>
 
