--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,21 @@ const { title } = Astro.props;
       name="description"
       content="Somos uma instituição de cursos profissionalizantes reconhecida pela credibilidade e compromisso com a formação profissional dos seus estudantes. Com uma vasta experiência na área de treinamentos e nos mais variados cursos profissionalizantes."
     />
+    <meta
+      name="keywords"
+      content="educação, cursos online, startup, empresa, disciplina, aprender"
+    />
+
+    <meta property="og:title" content="Grupo Visual | Cursos Online" />
+    <meta
+      property="og:description"
+      content="Somos uma instituição de cursos profissionalizantes reconhecida pela credibilidade e compromisso com a formação profissional dos seus estudantes. Com uma vasta experiência na área de treinamentos e nos mais variados cursos profissionalizantes."
+    />
+    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:url" content="https://www.grupovisual.com.br/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Grupo Visual" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
