--- a/src/components/Designs.astro
+++ b/src/components/Designs.astro
@@ -1,27 +1,42 @@
-<div
-  aria-hidden
-  class="w-32 h-32 bg-white [clip-path:circle(50%_at_50%_50%)] absolute top-6 lg:top-12 right-4 lg:right-40"
+<svg
+  class="h-56 w-56 text-primary absolute top-4 right-4 lg:right-12"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+  viewBox="0 0 207.75 194.249992"
+  version="1.0"
+  ><defs
+    ><clipPath
+      ><path
+        d="M 0.273438 5.222656 L 206.3125 5.222656 L 206.3125 193 L 0.273438 193 Z M 0.273438 5.222656 "
+        clip-rule="nonzero"></path></clipPath
+    ></defs
+  ><g clip-path="url(#017bc4)"
+    ><path
+      fill="currentColor"
+      d="M -86.90625 5.933594 L -167.246094 5.933594 C -167.246094 109.222656 -83.671875 192.796875 19.621094 192.796875 C 122.914062 192.796875 206.488281 109.222656 206.488281 5.933594 L 126.148438 5.933594 C 126.148438 64.789062 78.476562 112.460938 19.914062 112.460938 C -39.234375 112.167969 -86.90625 64.492188 -86.90625 5.933594 Z M -86.90625 5.933594 "
+      fill-opacity="1"
+      fill-rule="nonzero"></path></g
+  ></svg
 >
-</div>
 
 <div
   aria-hidden
-  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-0"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-24 w-24 bg-white absolute bottom-0 left-0"
 >
 </div>
 <div
   aria-hidden
-  class="hidden lg:block [clip-path:polygon(33%_0,100%_47%,100%_100%,0_0)] h-32 w-32 bg-white absolute bottom-32 left-0"
+  class="hidden lg:block [clip-path:polygon(33%_0,100%_47%,100%_100%,0_0)] h-24 w-24 bg-white absolute bottom-24 left-0"
 >
 </div>
 <div
   aria-hidden
-  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-32"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-24 w-24 bg-white absolute bottom-0 left-24"
 >
 </div>
 <div
   aria-hidden
-  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-32 w-32 bg-white absolute bottom-0 left-64"
+  class="hidden lg:block [clip-path:polygon(0_0%,100%_100%,100%_0)] h-24 w-24 bg-white absolute bottom-0 left-48"
 >
 </div>
 
