--- a/src/components/ThePage.astro
+++ b/src/components/ThePage.astro
@@ -9,7 +9,7 @@ import InstagramIcon from "../icons/Instagram.astro";
 <Layout title="Grupo Visual">
   <main class="w-full min-h-screen flex">
     <div
-      class="w-full bg-back relative pl-4 sm:pl-4 lg:pl-8 xl:pl-12 hidden md-lg:block"
+      class="w-full xl:w-5/12 bg-back relative pl-4 sm:pl-4 lg:pl-8 xl:pl-12 hidden md-lg:block"
     >
       <h3
         class="text-white italic text-3xl w-64 max-w-[80%] mt-52 z-20 hidden xl:block"
@@ -36,7 +36,7 @@ import InstagramIcon from "../icons/Instagram.astro";
 
       <Designs />
     </div>
-    <div class="w-full">
+    <div class="w-full xl:w-7/12">
       <div
         class="h-20 w-full bg-secondary pl-8 py-2 top-0 left-0 block md-lg:hidden"
       >
@@ -75,7 +75,7 @@ import InstagramIcon from "../icons/Instagram.astro";
               class="mt-12"
             >
               <button
-                class="bg-primary text-white text-xl md:text-2xl font-bold p-4 md:p-6 shadow-sm hover:scale-110 duration-200"
+                class="bg-primary rounded-sm text-white text-xl md:text-2xl font-bold p-4 md:p-6 shadow-sm hover:scale-110 duration-200"
               >
                 ÁREA DO ALUNO</button
               >
