--- a/src/components/ThePage.astro
+++ b/src/components/ThePage.astro
@@ -61,7 +61,7 @@ import InstagramIcon from "../icons/Instagram.astro";
             class="text-center md-lg:text-right w-full flex flex-col items-center md-lg:items-end"
           >
             <span class="text-back text-left md-lg:text-right"
-              >Este site está em construção</span
+              >Este site está em manutenção</span
             >
             <h2
               class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary w-[30rem] md-lg:w-96 max-w-full mt-12"
