--- a/src/components/ThePage.astro
+++ b/src/components/ThePage.astro
@@ -9,7 +9,7 @@ import InstagramIcon from "../icons/Instagram.astro";
 <Layout title="Grupo Visual">
   <main class="w-full min-h-screen flex">
     <div
-      class="w-full xl:w-5/12 bg-back relative pl-4 sm:pl-4 lg:pl-8 xl:pl-12 hidden md-lg:block"
+      class="w-full xl:w-6/12 bg-back relative pl-4 sm:pl-4 xxl:pl-8 2xl:pl-12 hidden md-lg:block"
     >
       <h3
         class="text-white italic text-3xl w-64 max-w-[80%] mt-52 z-20 hidden xl:block"
@@ -30,13 +30,13 @@ import InstagramIcon from "../icons/Instagram.astro";
 
       <img
         alt="Mulher com uma notebook"
-        src="/images/woman_with_laptop.webp"
-        class="absolute bottom-0 right-0 max-h-[90%] z-10"
+        src="/images/mulher.webp"
+        class="absolute bottom-0 right-0 max-h-full z-10"
       />
 
       <Designs />
     </div>
-    <div class="w-full xl:w-7/12">
+    <div class="w-full xl:w-6/12">
       <div
         class="h-20 w-full bg-secondary pl-8 py-2 top-0 left-0 block md-lg:hidden"
       >
@@ -60,7 +60,7 @@ import InstagramIcon from "../icons/Instagram.astro";
           <div
             class="text-center md-lg:text-right w-full flex flex-col items-center md-lg:items-end"
           >
-            <span class="text-back text-left md-lg:text-right"
+            <span class="text-back text-left md-lg:text-right md-lg:mr-2"
               >Este site está em manutenção</span
             >
             <h2
