add aria label for social media

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,10 @@ const { title } = Astro.props;
       property="og:description"
       content="Somos uma instituição de cursos profissionalizantes reconhecida pela credibilidade e compromisso com a formação profissional dos seus estudantes. Com uma vasta experiência na área de treinamentos e nos mais variados cursos profissionalizantes."
     />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta
+      property="og:image"
+      content="https://www.grupovisual.com.br/favicon.ico"
+    />
     <meta property="og:url" content="https://www.grupovisual.com.br/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
