improve text contrast

--- a/src/components/Designs.astro
+++ b/src/components/Designs.astro
@@ -1,5 +1,5 @@
 <svg
-  class="h-56 w-56 text-primary absolute top-4 right-4 hidden lg:block lg:right-16"
+  class="h-56 w-56 text-light-primary absolute top-4 right-4 hidden lg:block lg:right-16"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   viewBox="0 0 207.75 194.249992"
