--- a/src/components/ThePage.astro
+++ b/src/components/ThePage.astro
@@ -55,18 +55,20 @@ import InstagramIcon from "../icons/Instagram.astro";
           <h1
             class="text-back font-bold text-6xl md:text-7xl lg:text-8xl text-center md-lg:text-right"
           >
-            Em breve!
+            Em breve
           </h1>
           <div
             class="text-center md-lg:text-right w-full flex flex-col items-center md-lg:items-end"
           >
-            <span class="text-back text-left md-lg:text-right md-lg:mr-2"
-              >Este site está em manutenção</span
+            <span
+              class="text-back font-bold [font-size:1.875rem] [line-height:2.25rem] md:[font-size:2.1rem] md:[line-height:2.5rem] lg:[font-size:2.8rem] lg:[line-height:1] text-left md-lg:text-right"
+              >estaremos de volta</span
             >
+
             <h2
-              class="text-3xl md:text-4xl lg:text-5xl font-bold text-primary w-[30rem] md-lg:w-96 max-w-full mt-12"
+              class="text-2xl md:text-3xl lg:text-4xl font-bold text-primary w-[30rem] md-lg:w-96 max-w-full mt-16"
             >
-              Estamos fazendo mudanças para melhor!
+              Estamos atualizando para te oferecer a melhor experiência!
             </h2>
 
             <a
