fix portrait mobile

--- a/src/components/ThePage.astro
+++ b/src/components/ThePage.astro
@@ -7,9 +7,9 @@ import InstagramIcon from "../icons/Instagram.astro";
 ---
 
 <Layout title="Grupo Visual">
-  <main class="w-full min-h-screen flex">
+  <main class="w-full h-screen flex min-h-[550px]">
     <div
-      class="w-full xl:w-6/12 bg-back relative pl-4 sm:pl-4 xxl:pl-8 2xl:pl-12 hidden md-lg:block"
+      class="w-full xl:w-6/12 bg-back relative pl-4 sm:pl-4 xxl:pl-8 2xl:pl-12 hidden md-lg:block min-h-[550px]"
     >
       <h3
         class="text-white italic text-3xl w-64 max-w-[80%] mt-52 z-20 hidden xl:block"
@@ -49,7 +49,7 @@ import InstagramIcon from "../icons/Instagram.astro";
         </a>
       </div>
       <div
-        class="w-full h-[calc(100vh-5rem)] md-lg:h-full px-2 sm:px-4 md:px-8 flex flex-col justify-center items-center relative"
+        class="w-full h-[calc(100vh-5rem)] md-lg:h-full min-h-[550px] px-2 sm:px-4 md:px-8 flex flex-col justify-center items-center relative"
       >
         <div class="w-fit h-fit max-w-full">
           <h1
